<resources>
    <!-- Activity Types -->
    <string name="education">Education</string>
    <string name="recreational">Recreational</string>
    <string name="social">Social</string>
    <string name="diy">Diy</string>
    <string name="charity">Charity</string>
    <string name="cooking">Cooking</string>
    <string name="relaxation">Relaxation</string>
    <string name="music">Music</string>
    <string name="busywork">Busywork</string>
    <string name="random">Random</string>

    <string name="app_name">Not Bored</string>

    <!-- Label Prices -->
    <string name="free">Free</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>

    <!-- Label Fragments -->
    <string name="suggestion_fragment_label">{activity}</string>
    <string name="main_fragment_Label">Start</string>
    <string name="activity_list_fragment_Label">Activities</string>
    <string name="terms_fragment_label">Terms and conditions</string>

    <!-- Errors -->
    <string name="error_empty">Can\'t be empty</string>
    <string name="error_zero">Can\'t be zero</string>

    <!-- Preference Key -->
    <string name="saved_participants_key">saved_participants_key</string>

    <!-- Miscellaneous -->
    <string name="not_bored">Not Bored</string>
    <string name="participants_hint">Participants</string>
    <string name="start_btn">Start</string>
    <string name="term_and_conditions"><u>Terms and conditions</u></string>
    <string name="get_btn">Get</string>
    <string name="try_btn">Try Another</string>
    <string name="price">Price</string>
    <string name="text_term_and_conditions">
        <p>
            Lorem ipsum dolor sit amet consectetur adipiscing elit inceptos ridiculus iaculis,
            nullam ligula elementum duis tellus maecenas nec fermentum sed dictum
            laoreet, taciti donec habitant quam purus ultricies porta posuere sociis. Cubilia
            senectus netus integer tempor dignissim viverra nostra tellus scelerisque aliquet,
            semper penatibus tempus sociosqu class sociis bibendum justo etiam, rutrum
            aenean et eget pretium volutpat eu dictum dictumst.
        </p>
        <br />
        <p>
            Praesent gravida ridiculus cursus luctus maecenas in libero mi interdum, auctor
            ullamcorper eget nam eros condimentum litora tristique erat, fusce rhoncus
            mauris cras aptent non et ultricies. Iaculis porttitor etiam pulvinar proin fringilla
            ad, sem ornare sociosqu ultrices litora himenaeos egestas, eros laoreet mauris
            leo porta. Nibh interdum facilisis dapibus magnis phasellus tortor fusce nostra
            quam, ante non elementum himenaeos id hac et hendrerit eros, dui at sollicitudin
            turpis viverra molestie cras quis.
        </p>
        <br />
        <p>
            Dignissim faucibus auctor in vitae porttitor tellus nascetur tempor sociosqu,
            elementum dis ultricies eu tempus tincidunt lectus posuere, et ac interdum
            commodo montes convallis curae facilisis. Vitae diam phasellus litora ad aenean
            himenaeos, magnis malesuada nec metus faucibus, turpis mollis hac lacinia
            lacus. Condimentum dis in sed vel molestie integer, gravida eget volutpat
            interdum bibendum scelerisque magnis, penatibus non sollicitudin convallis
            egestas. Aptent mi ligula conubia justo habitant cubilia tellus curabitur, a nisi
            integer non eget vivamus cursus hac, lacus rutrum ridiculus tempor litora nostra
            dis.
        </p>
        <br />
        <p>
            Nisl pulvinar taciti tellus diam quam dictum cursus potenti euismod natoque
            feugiat mattis ornare tortor, aliquam orci dapibus inceptos id egestas ante viverra
            donec aptent suscipit nulla. Eget nisl fringilla cras felis maecenas nisi ridiculus id
            conubia hac primis sem ullamcorper porttitor, rutrum ac sodales ultrices
            vestibulum cum leo semper fusce porta eu fermentum. Proin nisi suspendisse
            class facilisi curabitur quisque, fusce vulputate semper a nulla velit, duis in orci
            faucibus turpis. Risus metus magnis aliquam accumsan laoreet congue per,
            tempus purus et odio senectus sodales vulputate, ligula malesuada dis habitasse
            nullam pellentesque.
        </p>
    </string>

</resources>